--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Launch App",
             "request": "launch",
             "mainClass": "App",
-            "vmArgs": "--module-path C:/Users/Lucas/Downloads/openjfx-24.0.2_windows-x64_bin-sdk/javafx-sdk-24.0.2/lib --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path C:\\Users\\Lucas\\Downloads\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib --add-modules javafx.controls,javafx.fxml",
         }
     ]
 }
