--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,16 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src"
+    ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.base.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.controls.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.fxml.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.graphics.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.media.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.swing.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx.web.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\javafx-swt.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\jdk.jsobject.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\jfx.incubator.input.jar",
-        "c:\\openjfx-24.0.2_windows-x64_bin-sdk\\javafx-sdk-24.0.2\\lib\\jfx.incubator.richtext.jar"
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.base.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.controls.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.fxml.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.graphics.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.media.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.swing.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.web.jar",
+        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx-swt.jar"
     ]
 }
