--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "java",
-            "name": "Launch App",
+            "name": "Current File",
             "request": "launch",
-            "mainClass": "App",
+            "mainClass": "${file}"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "com.frogman650.App",
             "vmArgs": "--module-path C:\\Users\\Lucas\\Downloads\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib --add-modules javafx.controls,javafx.fxml",
+            "projectName": "cnc12directoryrenamer"
         }
     ]
 }
