--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,3 @@
 {
-    "java.project.sourcePaths": [
-        "src"
-    ],
-    "java.project.outputPath": "bin",
-    "java.project.referencedLibraries": [
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.base.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.controls.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.fxml.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.graphics.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.media.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.swing.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx.web.jar",
-        "c:\\openjfx-17.0.16_windows-x64_bin-sdk\\javafx-sdk-17.0.16\\lib\\javafx-swt.jar"
-    ]
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
